    * 4107 Now you are able to search for check plugins
    * 3997 New metric for mrpe/check_icmp...
    * 4083 Web API: Always output full traceback in case of non Check_MK unhandled exceptions
    * 4135 View CSV export: Group cells are added in front of the regular cells for each row...
    * 4136 Availability CSV export: Adding grouping title as first column in case of grouped views
    * 3974 FIX: Sorting comments in hover menu of comments icon by time now
    * 4040 FIX: Fix error in view about "No WATO folder ..." in case of host imported via cmcdump...
    * 4046 FIX: Repaired html rendering....
    * 3938 FIX: tactical overview: fixed wrong display of number of host/service problems...
    * 3980 FIX: Fixed possible flickering GUI when using Chrome and zooming the page
    * 3981 FIX: Views: Fixed context button displaying depending on usage
    * 4071 FIX: Removed notes_url from "LOG *" logwatch services...
    * 4072 FIX: Fixed multiple issues in BI availability when groups or names contain umlauts
    * 4080 FIX: Fixed possible exception "unsupported operand type" in matrix views
    * 4127 FIX: Fixed possible "maximum recursion depth exceeded" error when sorting tables with a lot of text in cells
    * 4128 FIX: Fixed exception in "Virtual host tree" snapin in case a user tries to access a not existing tree
    * 4129 FIX: Fixed possible exception when a view is linking to a not permitted other view
    * 4137 FIX: List of strings: New fields are now added when last field is not empty...
    * 4140 FIX: Views: Download agent output action was not displayed correctly on SNMP+Agent hosts

    WATO:
    * 3984 Permissions can now be filtered by providing a search term on the "edit role" page...
    * 4044 Display host/service notification delay with d/h/m/s, not with fractions of minute
    * 4075 Activate Changes has been reworked...
    * 4167 Notification plugins: now can be hidden by role...