@@ -1,0 +1,9 @@
+Title: View action: Default values of sticky, notification and persistent options can now be configured via global settings.
+Level: 1
+Component: multisite
+Compatible: compat
+Version: 1.4.0i3
+Date: 1482072617
+Class: feature
+
+Above default values can be configured via {{View action defaults}} in {{User interface}} in {{Global settings}}.
